--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div class="container mt-5">
         <div class="jumbotron">
-            <h1 class="display-4">IDOR Explained</h1>
+            <h1 class="display-4">IDOR Explained number two</h1>
             <p class="lead">Learn about Insecure Direct Object Reference</p>
             <hr class="my-4">
             <p>IDOR is a type of access control vulnerability that involves me doing a lot of googling during a HackTheBox challenge and feeling dumb till I get the hang of it. It's sneaky and fun once you get it though.</p>
